# mownit

lab1/: CMakeLists.txt  lab1.ipynb  zad3.c
lab2/: CMakeLists.txt  main.c  results.csv  zad.ipynb
lab3/: CMakeLists.txt  notoptimalised.csv  zad1.ipynb  zad2.c  zad2.ipynb  zad3.ipynb
lab4/: optimalised.csv  zad1.ipynb  zad2.ipynb  zad3.ipynb
lab5/: .RData  .Rhistory  data.csv  data1.csv  zad1.R  zad2.c
lab6/: dog.pgm  interpolation.ipynb
lab7/: README.txt  lab7.ipynb
lab9/: README.txt  gauss_quadrature.ipynb
